# flappy-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: pages.yml
site/: flappy_rust.wasm  index.html  mq_js_bundle.js  storage_plugin.js
src/: main.rs  save.rs
web/: index.html  mq_js_bundle.js
